--- a/package.json
+++ b/package.json
@@ -1,21 +1,65 @@
 {
-  "name": "starter-rest-api",
+  "name": "SugataChat",
   "version": "1.0.0",
-  "description": "",
+  "productName": "SugataChat",
   "main": "index.js",
+  "author": "Sugata Bhar",
   "scripts": {
-    "dev": "env-cmd nodemon index.js",
-    "repl": "env-cmd node"
-  },
-  "keywords": [],
-  "author": "Kam Lasater <kam.lasater@cyclic.sh>",
-  "license": "ISC",
-  "devDependencies": {
-    "nodemon": "^2.0.16"
+    "build:dev": "webpack",
+    "build:prod": "webpack -p --env production",
+    "dev-server": "webpack-dev-server",
+    "test": "cross-env NODE_ENV=test jest --config=jest.config.json",
+    "start": "node server/server.js",
+    "heroku-postbuild": "yarn run build:prod"
   },
   "dependencies": {
-    "cyclic-dynamodb": "0.0.21",
-    "env-cmd": "^10.1.0",
-    "express": "^4.18.1"
+    "@babel/preset-env": "^7.20.2",
+    "babel-cli": "6.24.1",
+    "babel-core": "^6.26.3",
+    "babel-loader": "7.1.1",
+    "babel-node": "^0.0.1-security",
+    "babel-plugin-transform-class-properties": "6.24.1",
+    "babel-plugin-transform-object-rest-spread": "6.23.0",
+    "babel-polyfill": "^6.26.0",
+    "babel-preset-env": "^1.7.0",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-flow": "^6.23.0",
+    "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-1": "^6.22.0",
+    "bootswatch": "^4.1.3",
+    "css-loader": "0.28.4",
+    "express": "4.15.4",
+    "extract-text-webpack-plugin": "3.0.0",
+    "firebase": "4.2.0",
+    "font-awesome": "^4.7.0",
+    "history": "4.7.2",
+    "moment": "2.18.1",
+    "node-notifier": "^5.2.1",
+    "normalize.css": "7.0.0",
+    "numeral": "2.0.6",
+    "react": "15.6.1",
+    "react-addons-shallow-compare": "15.6.0",
+    "react-dates": "12.3.0",
+    "react-dom": "15.6.1",
+    "react-hot-loader": "^4.13.1",
+    "react-modal": "2.2.2",
+    "react-redux": "5.0.5",
+    "react-router-dom": "4.1.2",
+    "redux": "3.7.2",
+    "redux-thunk": "2.2.0",
+    "sass": "^1.57.0",
+    "sass-loader": "7.2.0",
+    "style-loader": "0.18.2",
+    "validator": "8.0.0",
+    "webpack": "3.1.0"
+  },
+  "devDependencies": {
+    "cross-env": "5.0.5",
+    "dotenv": "4.0.0",
+    "enzyme": "2.9.1",
+    "enzyme-to-json": "1.5.1",
+    "jest": "20.0.4",
+    "react-test-renderer": "15.6.1",
+    "webpack-dev-server": "2.5.1"
   }
 }
